syntax = "proto3";

import "proto/conabit/englearn/collection/collection_models.proto";
import "proto/conabit/englearn/common/session.proto";
import "google/protobuf/timestamp.proto";

package conabit.englearn.exercise;

option go_package = "github.com/Conabit-Corp/EngLearn/proto/conabit/englearn/exercise";

service ExerciseService{
    rpc StartNewExercise(StartNewExerciseRequest) returns (StartNewExerciseResponse) {}

    rpc SolveTask(SolveTaskRequest) returns (SolveTaskResponse) {}

    rpc FinishExercise(FinishExerciseRequest) returns (Exercise) {}
}

message Exercise{
    string id = 1;
    string collection_id = 2;
    google.protobuf.Timestamp started_at = 3;
    google.protobuf.Timestamp finished_at = 4;
    repeated Task solved_tasks = 5;
    repeated Task failed_tasks = 6;
}

message StartNewExerciseRequest{
    conabit.englearn.common.Session session = 1;
    enum GenerationType {
        OLD = 0;
        MY_CHOISE = 1;
        REPEAT = 2;
    }
    GenerationType gen_type = 2;
    string collection_id = 3;
    repeated string word_ids = 4;   
}

message StartNewExerciseResponse{    
    repeated Task tasks = 1;
}

message FinishExerciseRequest{
    conabit.englearn.common.Session session = 1;
    repeated Task tasks = 2;
}

message SolveTaskRequest{
    conabit.englearn.common.Session session = 1;
    Task task = 2;
}

message SolveTaskResponse{
    bool solved = 1;
}

message Task{
    string id = 1;
    string answer = 2;
    conabit.englearn.collection.Word word = 3;
    string pair_id = 4;
    enum TaskType{
        JUST_INPUT = 0;
        ONE_OF_N = 1;
        N_OF_N = 2;
    }
    TaskType task_type = 5;
}